Integration with Spring Social and Spring Batch

--- a/src/main/resources/META-INF/application.properties
+++ b/src/main/resources/META-INF/application.properties
@@ -13,6 +13,8 @@ dataSource.url=${database.url}
 dataSource.username=${database.user}
 dataSource.password=${database.password}
 
+
+
 #ORM-JPA Hibernate Configuration: 
 #create-drop, create, update, validate
 hibernate.hbm2ddl.auto=${hibernate.hbm2ddl.auto}
@@ -23,4 +25,23 @@ hibernate.hbm2ddl.auto=${hibernate.hbm2ddl.auto}
 #Select "Turn on"
 mail.username=user@gmail.com
 mail.password=pass
+
+#Spring Social
+facebook.appKey={{your appKey}}
+facebook.appSecret={{your appSecret}}
+facebook.accessToken={{your accessToken}}
+twitter.appKey={{your appKey}}
+twitter.appSecret={{your appSecret}}
+twitter.accessToken={{your accessToken}}
+twitter.accessTokenSecret={{your accessTokenSecret}}
+linkedin.appKey={{your appKey}}
+linkedin.appSecret={{your appSecret}}
+linkedin.accessToken={{your accessToken}}
+
+
+#Spring Batch
+spring.batch.job.enabled=false
+spring.batch.initializer.enabled=true
+batch.drop.script=classpath:/org/springframework/batch/core/schema-drop-mysql.sql
+batch.schema.script=classpath:/org/springframework/batch/core/schema-mysql.sql
 
